# burnbox

./: .gitignore  CMakeLists.txt  README.md
src/: .rootkey.seal  BurnboxApi.cpp  BurnboxApi.h  CMakeLists.txt  ClientServer.cpp  ClientServer.h  Tree.cpp  Tree.h  Util.cpp  Util.h  UtilCrypto.cpp  UtilCrypto.h  UtilPKCrypto.cpp  UtilPKCrypto.h  bbfs.cpp  bbfs.h  burnboxfs.cpp  burnboxfs.h  idx.pb.cc  idx.pb.h  idx.proto  init.sh  log.cpp  main.cpp  node.pb.cc  node.pb.h  node.proto  params.h  tpm_emulator.config
tests/: CMakeLists.txt  test-main.cpp  test.cpp  testgetallkeys.cpp
